# Handbook_Python

./: .gitignore  260325.txt  260325_2.txt  PYTHON BASICS 1 (vzem).ipynb  PYTHON BASICS 2 - Algorithms (vzem).ipynb  Package.py  README.md  _0_Python-basics.ipynb  _1_standard-libraries.ipynb  _Databases.ipynb  _Libraries-and-functionalities.ipynb  _Libraries-standard.ipynb  _Web-scraping.ipynb  __Python-basics.ipynb  asdf.ipynb  calc.py  cmd_line_prog.py  cmd_line_prog_2.py  conda-env.yml  config.ini  environment.yml  log.log.1  logging_practice.py  negative_reasons.csv  pyproject.toml  refined_categorized_negative_reasons.csv  requirements.txt  temp.ipynb  temp.txt  test.py  test2_calc.py  test_calc.py
Package2/: Package2.py
config-files/: config.ini  config.json  config.py  config.toml  config.xml  config.yaml  config1.json
example_datasets/: 2105187405.fa  CASP14_2020.csv  ETH_1h.csv  ETH_1h.xlsx  Hypercuboids_data.csv  IPDS7_hyperrectangles_2.tsv  basic.json  blast_BE_isolate.xml  checkk.json  climate_results.txt  covid_sequence_MT385497.fasta  ebola_sequence.fasta  ebola_sequence.gb  file1.txt  file2.txt  file3.txt  heatmap_dataset.csv  items.csv  people.json  people1.json  people2.json  sample_archive.tar.bz2  sample_archive2.tar.bz2  toy_dataset_190123.json
output/: TheGuardian_headlines.csv  TheGuardian_headlines2.csv  csv.csv  file.fasta  news_headlines.csv  nytimes_headlines.csv  object.pkl  speedOutput2.csv  sql_output.csv  tutorial.db
programs/: debug.py  timer.py
socket/: 1_client.py  1_server.py  README.md  create_connection.py
software/: run.py  (+1 more)
(+17 files in other folders)
