[project]
name = "Handbook_Python"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenii Zorin",email = "zorin.evgenii.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
