[project]
name = "Handbook_Python"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenii Zorin",email = "zorin.evgenii.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
